@@ -16,9 +16,8 @@ test_invalid_compression_factory (Compression::CompressionManager_ptr cm)
       Compression::CompressorFactory_var factory =
         cm->get_factory (100);
     }
-  catch (const Compression::UnknownCompressorId& ex)
+  catch (const Compression::UnknownCompressorId&)
     {
-      ACE_UNUSED_ARG (ex);
       succeed = true;
     }
   catch (const CORBA::Exception&)
