@@ -1,3 +1,14 @@
+Fri Jan 27 10:26:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * MPC/config/rlecompressor.mpb:
+          No requires
+
+        * tests/Compression/Compression_Test.mpc:
+        * tests/Compression/RLECompressorTest.cpp:
+        * tests/Compression/bzip2server.cpp:
+        * tests/Compression/run_test.pl:
+          Added rle test
+
 Fri Jan 27 09:48:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC/config/rlecompressor.mpb:
